java/java-tests/testData/ig/com/siyeh/igtest/inheritance/non_protected_constructor_in_abstract_class/NonProtectedConstructorInAbstractClass.java
package com.siyeh.igtest.classlayout;

public abstract class NonProtectedConstructorInAbstractClass
{
  public <warning descr="Constructor 'NonProtectedConstructorInAbstractClass()' of an abstract class should not be declared 'public'">NonProtectedConstructorInAbstractClass</warning>()
    {
    }
    private NonProtectedConstructorInAbstractClass(int foo)
    {
    }

    public <error descr="Identifier expected">void</error>();
}
